fix logo row height on mobile

--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -20,10 +20,6 @@ h2 {
     min-height: 100vh; 
 }
 
-.row {
-    margin-right: 0;
-}
-
 div.container-fluid {
     padding-left: 0;
     padding-right: 0;
@@ -46,6 +42,16 @@ div.container-fluid {
     @media(max-width: 991px) {
         display: flex;
         flex-direction: row;
+        width: 100vw; 
+    }
+}
+
+.logo-row {
+    @media(max-width: 600px) {
+        height: 350px; 
+        align: center; 
+        margin-left: 0;
+        padding-left: 0; 
     }
 }
 
